replace arrows in helpcenter, and fix answers img on mobile

--- a/assets/styles/src/basic/_common.scss
+++ b/assets/styles/src/basic/_common.scss
@@ -122,6 +122,9 @@ a:hover {
 }
 
 @media screen and (max-width: 767px) {
+  img {
+    max-width: 100%;
+  }
   .mobileMode {
     display: block;
   }
